--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vavt/cm-extension": "^1.9.0",
     "axios": "^1.8.4",
+    "md-editor-rt": "^5.4.5",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
