--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.1",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@vavt/cm-extension": "^1.9.0",
     "axios": "^1.8.4",
     "md-editor-rt": "^5.4.5",
