--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@headlessui/react": "^2.2.1",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@vavt/cm-extension": "^1.9.0",
+    "aos": "^2.3.4",
     "axios": "^1.8.4",
+    "framer-motion": "^12.6.5",
     "md-editor-rt": "^5.4.5",
     "next": "15.2.4",
     "react": "^19.0.0",
@@ -23,6 +25,7 @@
     "@eslint/eslintrc": "^3",
     "@svgr/webpack": "^8.1.0",
     "@tailwindcss/postcss": "^4",
+    "@types/aos": "^3.0.7",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
